// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > prominence > render prominence default 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      prominence="default"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > prominence > render prominence strong 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #f9f9fa;
  text-decoration-color: #f9f9fa;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      prominence="strong"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > prominence > render prominence stronger 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      prominence="stronger"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > prominence > render prominence weak 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      prominence="weak"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > render correctly with bad sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #3f4250;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > render correctly with href props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #641cb3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > render correctly with href props 2`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .emotion-2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-0:hover .emotion-2,
.emotion-0:focus .emotion-2 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #641cb3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

.emotion-3 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
  margin-left: 8px;
}

.emotion-3 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-5 .emotion-2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-5>* {
  pointer-events: none;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-5:hover .emotion-2,
.emotion-5:focus .emotion-2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-5[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-5:hover::after,
.emotion-5:focus::after {
  background-color: #641cb3;
}

.emotion-5:active {
  text-decoration-thickness: 2px;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.emotion-15 {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
  margin-left: 8px;
}

.emotion-15 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      <svg
        class="emotion-2 emotion-3 emotion-4"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
          fill-rule="evenodd"
        />
      </svg>
      Hello
    </a>
    <a
      class="emotion-5 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
      <svg
        class="emotion-2 emotion-3 emotion-4"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
          fill-rule="evenodd"
        />
      </svg>
    </a>
    <a
      class="emotion-5 emotion-1"
      data-variant="standalone"
      href="/"
      rel="noopener noreferrer"
      target="_blank"
      variant="bodyStrong"
    >
      Hello
      <span
        class="emotion-12 emotion-13"
      >
        <svg
          class="emotion-2 emotion-15 emotion-4"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.25 6.5a.75.75 0 0 0-.75.75v8.5c0 .414.336.75.75.75h8.5a.75.75 0 0 0 .75-.75v-4a.75.75 0 0 1 1.5 0v4A2.25 2.25 0 0 1 12.75 18h-8.5A2.25 2.25 0 0 1 2 15.75v-8.5A2.25 2.25 0 0 1 4.25 5h5a.75.75 0 0 1 0 1.5z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.194 13.753a.75.75 0 0 0 1.06.053L16.5 5.44v2.81a.75.75 0 0 0 1.5 0v-4.5a.75.75 0 0 0-.75-.75h-4.5a.75.75 0 0 0 0 1.5h2.553l-9.056 8.194a.75.75 0 0 0-.053 1.06"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      rel="noopener noreferrer"
      target="_blank"
      variant="bodyStrong"
    >
      Hello
      <span
        class="emotion-12 emotion-13"
      >
        <svg
          class="emotion-2 emotion-15 emotion-4"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.25 6.5a.75.75 0 0 0-.75.75v8.5c0 .414.336.75.75.75h8.5a.75.75 0 0 0 .75-.75v-4a.75.75 0 0 1 1.5 0v4A2.25 2.25 0 0 1 12.75 18h-8.5A2.25 2.25 0 0 1 2 15.75v-8.5A2.25 2.25 0 0 1 4.25 5h5a.75.75 0 0 1 0 1.5z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.194 13.753a.75.75 0 0 0 1.06.053L16.5 5.44v2.81a.75.75 0 0 0 1.5 0v-4.5a.75.75 0 0 0-.75-.75h-4.5a.75.75 0 0 0 0 1.5h2.553l-9.056 8.194a.75.75 0 0 0-.053 1.06"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > render correctly with no sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > render correctly with oneLine 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px; width: 200px;"
    >
      <a
        class="emotion-0 emotion-1"
        data-variant="standalone"
        href="/"
        variant="bodyStrong"
      >
        Hello this is a very long text that should be truncated
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Link > render correctly with sizes 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

.emotion-2 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-2 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-2>* {
  pointer-events: none;
}

.emotion-2:hover,
.emotion-2:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-2:hover .e1afnb7a2,
.emotion-2:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-2[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-2:hover::after,
.emotion-2:focus::after {
  background-color: #005da3;
}

.emotion-2:active {
  text-decoration-thickness: 2px;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-4 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-4>* {
  pointer-events: none;
}

.emotion-4:hover,
.emotion-4:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-4:hover .e1afnb7a2,
.emotion-4:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-4[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  background-color: #005da3;
}

.emotion-4:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
    ,
    <a
      class="emotion-2 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodySmallStrong"
    >
      Hello
    </a>
    ,
    <a
      class="emotion-4 emotion-1"
      data-variant="standalone"
      href="/"
      variant="captionStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > render correctly with target blank 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .emotion-4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-0:hover .emotion-4,
.emotion-0:focus .emotion-4 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #641cb3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.emotion-5 {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
  margin-left: 8px;
}

.emotion-5 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      rel="noopener noreferrer"
      target="_blank"
      variant="bodyStrong"
    >
      Hello
      <span
        class="emotion-2 emotion-3"
      >
        <svg
          class="emotion-4 emotion-5 emotion-6"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.25 6.5a.75.75 0 0 0-.75.75v8.5c0 .414.336.75.75.75h8.5a.75.75 0 0 0 .75-.75v-4a.75.75 0 0 1 1.5 0v4A2.25 2.25 0 0 1 12.75 18h-8.5A2.25 2.25 0 0 1 2 15.75v-8.5A2.25 2.25 0 0 1 4.25 5h5a.75.75 0 0 1 0 1.5z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.194 13.753a.75.75 0 0 0 1.06.053L16.5 5.44v2.81a.75.75 0 0 0 1.5 0v-4.5a.75.75 0 0 0-.75-.75h-4.5a.75.75 0 0 0 0 1.5h2.553l-9.056 8.194a.75.75 0 0 0-.053 1.06"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > render correctly with variants props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #641cb3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="inline"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > sentiment > render danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #b3144d;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #92103f;
  text-decoration-color: #92103f;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #b3144d;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > sentiment > render info 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > sentiment > render neutral 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #3f4250;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > sentiment > render primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #641cb3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > sentiment > render secondary 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ac22e7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #8f1cc2;
  text-decoration-color: #8f1cc2;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #ac22e7;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > sentiment > render success 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #22674e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1b533f;
  text-decoration-color: #1b533f;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #22674e;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link > sentiment > render warning 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #7c5400;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #664300;
  text-decoration-color: #664300;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #7c5400;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;
